<resources>
    <string name="hi_there">Hi there!</string>
    <string name="my_profile">My Profile</string>
    <string name="past_purchases">Past Purchases</string>
    <string name="learn_how_to">Learn how to</string>
    <string name="payment_details">Payment Details</string>
    <string name="settings">Settings</string>
    <string name="search_for_a_specific_place_to_charge">Search for a specific place to charge</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="km_with_value">%1$.2f Km</string>
    <string name="list">List</string>
    <string name="how_to_icon">how to icon</string>
    <string name="menu_icon">menu icon</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="_please_turn_on_your_location_from_settings">To show you the venues in your area this application needs your device location,  Please turn on your location from settings.</string>
    <string name="_please_allow_location_permission">To show you the venues in your area this application needs your device location,  Please allow permission to access your device location for Beat The Queue </string>
    <string name="allow_permission">Allow Permission</string>
    <plurals name="duration">
        <item quantity="one">%1$.0f mint</item>
        <item quantity="other">%1$.0f mints</item>
    </plurals>



</resources>
