<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="samkazmi.example.home.callback.HomeViewCallback" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bMenu"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/menu_icon"
            android:onClick="@{() -> callback.onMenuButtonClicked()}"
            android:padding="14dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_hamburger_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bMenu"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bMenu">

            <samkazmi.example.home.utils.EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="14dp"
                android:fontFamily="@font/sf_ui_regular"
                android:hint="@string/search_for_a_specific_place_to_charge"
                android:imeOptions="actionSearch"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:maxLines="1"
                android:padding="18dp"
                android:textColor="@color/search_text_color"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>


        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
            android:id="@+id/rvBigList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvSearch"
            tools:itemCount="3"
            app:msrv_gravity="start"
            app:msrv_ms_per_inch="40.0"
            android:layout_marginTop="-10dp"
            tools:listitem="@layout/venue_item_big" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bList"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rvSmallList"
            android:layout_centerHorizontal="true"
            android:layout_margin="28dp"
            android:fontFamily="@font/sf_ui_medium"
            android:gravity="center"
            android:letterSpacing="-.01"
            android:onClick="@{() -> callback.onListButtonClicked()}"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/list"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:theme="@style/Theme.MaterialComponents.Bridge"
            app:backgroundTint="@color/colorWhite"
            app:cornerRadius="40dp"
            app:elevation="8dp"
            app:icon="@drawable/ic_list"
            app:iconGravity="textStart"
            app:iconPadding="12dp"
            app:iconSize="24dp"
            app:iconTint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/rvSmallList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/colorPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bCurrentLocation"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rvSmallList"
            android:layout_alignEnd="@id/bList"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:onClick="@{() -> callback.onCurrentLocationButtonClicked()}"
            android:src="@drawable/ic_current_location"
            android:theme="@style/Theme.MaterialComponents.Bridge"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="8dp"
            app:fabSize="auto"
            app:layout_constraintBottom_toTopOf="@id/rvSmallList"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="28dp"
            app:rippleColor="@color/colorWhite" />


        <samkazmi.example.home.utils.CustomViewPager
            android:id="@+id/rvSmallList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp" />

    </RelativeLayout>
</layout>